[package]
name = "johari-mirror"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
env_logger = "0.11.8"
futures = "0.3.31"
k8s-openapi = { version = "0.27.0", features = ["v1_34"] }
kube = { version = "3.0.1", features = ["runtime"] }
log = "0.4.29"
reqwest = { version = "0.13.2", default-features = false, features = [
    "form",
    "json",
] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
wildmatch = "2.6.1"
